# static_interface_pattern

./: CMakeLists.txt  README.md
bad/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  main.cpp  performance.cpp  unittest.cpp
dynamic_abstraction/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  interface.h  main.cpp  performance.cpp  unittest.cpp
dynamic_interface/: CMakeLists.txt  a.h  a_interface.h  b.h  b_interface.h  main.cpp  unittest.cpp
static_abstraction/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  interface.h  main.cpp  performance.cpp  unittest.cpp
static_interface/: CMakeLists.txt  a.h  a_interface.h  b.h  b_interface.h  helpers.h  main.cpp  unittest.cpp
